--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,13 +14,21 @@
         android:theme="@style/AppTheme" >
         
         <activity
-            android:name="com.alex.demo.MainActivity"
-            android:label="@string/app_name" >
+            android:name="com.alex.demo.Splash"
+            android:theme="@style/Fullscreen.Splash" >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        
+        <activity 
+            android:name="com.alex.demo.Feature"
+            android:theme="@style/Fullscreen.Feature" />
+        
+        <activity 
+            android:name="com.alex.demo.MainActivity"
+            android:label="@string/app_name" />
     </application>
 
 </manifest>
