--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,8 +15,9 @@
         
         <!-- 启动画面 -->
         <activity
-            android:name="com.alex.demo.Splash"
-            android:theme="@style/Splash" >
+            android:name="com.alex.develop.Splash"
+            android:theme="@style/AppTheme.Splash"
+            android:screenOrientation="portrait" >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -25,7 +26,7 @@
         
         <!-- 主界面 -->
         <activity 
-            android:name="com.alex.demo.MainActivity"
+            android:name="com.alex.develop.MainActivity"
             android:label="@string/app_name" />
     </application>
 
